<resources>
    <string name="app_name">Push Notification</string>
    <string name="type_your_message">Type your Message</string>
    <string name="push_notification">Send Notification</string>
    <string name="superhero1">Superhero1</string>
    <string name="superhero2">Superhero2</string>
    <string name="superhero3">Superhero3</string>
    <string name="superhero4">Superhero4</string>
    <string name="login_with">Login With :</string>
    <string name="call_notification">Call Notification</string>
    <string name="channel_description">call notification channel</string>
</resources>
