<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="50"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/radio_one"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_weight="25"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:textColor="@android:color/black"
            android:text="One to One" />

        <RadioButton
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_weight="25"
            android:onClick="onRadioButtonClicked"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="Group" />
    </RadioGroup>


    <EditText
        android:id="@+id/et_sendMessage"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/type_your_message"
        android:imeOptions="actionDone"
        android:inputType="textWebEditText"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <Button
        android:id="@+id/sendbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/push_notification" />

    <Button
        android:id="@+id/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/primaryTextColor"
        android:text="@string/call_notification" />

    <Button
        android:id="@+id/custom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/primaryTextColor"
        android:text="Custom Message" />

</LinearLayout>